--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "anchor-link": "^3.5.1",
     "email-js": "^2.0.2",
     "emailjs-com": "^3.2.0",
-    "firebase": "^9.18.0",
+    "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
@@ -19,7 +19,6 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.10.0"
   }
 }
